# workday-mcp-server

./: .env.example  .gitignore  main.py  pyproject.toml
src/workday_mcp_server/: server.py  workday_auth.py  workday_client.py
src/workday_mcp_server/tools/: delete_restaurant_order.py  get_restaurant_orders_wql.py  get_worker_by_name.py  patch_restaurant.py  post_restaurant_order.py  restaurant_orders.py  restaurants.py
