[project]
name = "workday-mcp-server"
version = "0.1.0"
description = "Workday MCP Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.28.0",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workday_mcp_server"]